tests/ui/parser/doc-before-fn-rbrace.rs
fn main() {
    /// document
    //~^ ERROR found a documentation comment that doesn't document anything
    //~| HELP if a comment was intended use `//`
}
